<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/pref_service"
        android:summary="@string/enable_service_summary"
        android:title="@string/enable_service_title"
        app:icon="@drawable/enable" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/pref_hide_icon"
        android:summary="@string/hide_icon_summary"
        android:title="@string/hide_icon_title"
        app:icon="@drawable/launcher"/>

    <PreferenceCategory
        android:title="@string/developer_options"
        android:key="devOptions">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="@string/pref_service"
            android:key="@string/pref_debug"
            android:title="@string/enable_debug_title"
            android:summary="@string/enable_debug_summary"
            app:icon="@drawable/debug" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="@string/pref_service"
            android:key="@string/pref_screen"
            android:title="@string/enable_screen_title"
            android:summary="@string/enable_screen_summary"
            app:icon="@drawable/screen" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="@string/pref_service"
            android:key="@string/pref_no_media"
            android:title="@string/enable_media_title"
            android:summary="@string/enable_media_summary"
            app:icon="@drawable/media" />

    </PreferenceCategory>

</PreferenceScreen>